--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
         </ul>
       </div>
     </div>
-    <div class="emran text-center mt-5">
-      <a href="https://www.facebook.com/ibnshayed"><h2>Developed By @Emran Ibn Shayed</h2></a>
+    <div class="emran text-center mt-5 text-light">
+      <h2>Developed By <a href="https://www.facebook.com/ibnshayed">@Emran Ibn Shayed</a></h2>
     </div>
   </section>
 
